# python-modern-opengl-4x-compute

./: GEMINI.md  LICENSE  README.md  develop.py  main.py  pyproject.toml
.GEMINI/: GUIDELINES.md  PROJECT_INFO.md
docs/: index.md  intro.md  sample.md
docs/01_getting_started/: 01_hello_window.md  02_hello_triangle.md  03_shader.md  04_texture.md  05_transformations.md  06_coordinate_systems.md  07_camera.md  08_review.md
docs/02_lighting/: 01_lighting.md
src/01_getting_started/01_hello_window/: 01_hello_window.py  02_hello_window_clear.py
src/01_getting_started/02_hello_triangle/: 01_hello_triangle.py  02_hello_triangle_indexed.py
src/01_getting_started/03_shader/: 01_shaders_uniform.py  02_shaders_interpolation.py  02_shaders_uniform_with_pipeline.py  03_shaders_class.py  03_shaders_interpolation.py  04_shader.vs  shader.py
src/01_getting_started/04_texture/: 01_textures.py  02_shader.fs  02_textures_combined.py  shader.py
src/01_getting_started/05_transformations/: 01_shader.vs  01_transformations.py
src/01_getting_started/06_coordinate_system/: 01_coordinate_system.py  02_coordinate_systems_depth.py  03_coordinate_systems_multiple.py
src/01_getting_started/06_coordinate_systems/: 01_coordinate_systems.py  02_coordinate_systems_depth.py  03_coordinate_systems_multiple.py  03_coordinate_systems_multiple.vs
src/01_getting_started/07_camera/: 01_camera_circle.py  02_camera_keyboard_dt.py  04_camera_class.py  (+1 more)
src/03_model_loading/: mesh.py  model.py  model_loading.py  shader.py
stubs/pyassimp/: __init__.pyi  material.pyi  postprocess.pyi  structs.pyi
(+29 files in other folders)
